cmake_minimum_required(VERSION 3.6)
set(VI_DIRECTORY "{{BUILDER_VENGEANCE_PATH}}" CACHE STRING "Vengeance directory")
{{BUILDER_FEATURES}}
include(${VI_DIRECTORY}/deps/vitex/deps/toolchain.cmake)
project({{BUILDER_OUTPUT}})
if (NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin)
endif()
add_subdirectory(${VI_DIRECTORY} vitex)
link_directories(${VI_DIRECTORY})
add_library({{BUILDER_OUTPUT}} SHARED
    ${CMAKE_CURRENT_SOURCE_DIR}/src/addon.cpp)
set_target_properties({{BUILDER_OUTPUT}} PROPERTIES
    OUTPUT_NAME "{{BUILDER_OUTPUT}}"
    CXX_STANDARD ${VI_CXX}
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF)
target_include_directories({{BUILDER_OUTPUT}} PRIVATE ${VI_DIRECTORY})
target_link_libraries({{BUILDER_OUTPUT}} PRIVATE vitex)